# skilldock.io

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  wrangler.toml
mcp/: README.md
mcp/client/: skilldock_mcp_client.py
mcp/server/: skilldock_mcp_server.py
public/: site.webmanifest
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/proxy/[...path]/: route.ts
src/app/privacy/: page.tsx
src/app/robots.txt/: route.ts
src/app/search/: page.tsx
src/app/sitemap.xml/: route.ts
src/app/sitemaps/pages.xml/: route.ts
src/app/sitemaps/skills/[page]/: route.ts
src/app/skill/[namespace]/[slug]/: page.tsx
src/app/skill/[namespace]/[slug]/releases/: page.tsx
src/app/terms/: page.tsx
src/components/: navigation.tsx  one-prompt-section.tsx  registry-overview-section.tsx  site-footer.tsx
src/components/hero/: circuit-flow.tsx
src/components/search/: search-results-view.tsx  skill-details-view.tsx  skill-releases-history-view.tsx  trending-results-view.tsx
src/components/ui/: ResizeAbleNavbar.tsx  moving-border-button.tsx  pill.tsx  rainbow-button.tsx  shiny-button.tsx  skeleton.tsx  theme-toggle.tsx
src/hooks/: use-mobile.ts
src/lib/: api.ts  site-url.ts  sitemap.ts
src/skilldock/: __init__.py  _version.py  cli.py  client.py  config.py  local_skills.py  openapi.py  skill_package.py
tests/: test_cli.py  test_client.py  test_local_skills.py  test_openapi.py  test_skill_package.py
